--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 pandas==2.0.0
-cloudscraper==1.2.69
-bs4==0.0.1
+selenium==4.9.1
+undetected-chromedriver==3.4.7
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.21.0
